Fixed tiny bug in side bar on mobile.

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,3 +12,7 @@ body {
 main {
     flex: 1 0 auto;
 }
+
+.side-nav{
+    z-index: 9999;
+}
